--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="no_data_available">Click the button to load list of repositories</string>
+    <string name="no_repos">No repos for this user</string>
 </resources>
