--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="click_to_load">Click the button to load list of repositories</string>
     <string name="no_repos">No repos for this user</string>
     <string name="no_subscribers">No subscribers found for current repo</string>
+    <string name="search_hint">Github username</string>
 </resources>
